AC_INIT(libdecaes, 0.1.1)
AC_CONFIG_SRCDIR(src/lib/aesdec.cpp)
AM_INIT_AUTOMAKE(dist-bzip2)
dnl AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_HEADER(src/lib/config.h)
dnl AC_PROG_LEX
dnl AC_PROG_YACC
AC_CHECK_HEADERS(unistd.h)
dnl AC_EXEEXT
AC_LANG_CPLUSPLUS
AC_C_BIGENDIAN

AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debug info.],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=true])
AM_CONDITIONAL(NDEBUG, test x$debug = xfalse)

AC_ARG_ENABLE(display,
[  --enable-display    Turn on display using SDL.],
[case "${enableval}" in
  yes) display=true ;;
  no)  display=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-display) ;;
esac],[display=false])
AM_CONDITIONAL(DISP, test x$display = xtrue)

dnl files to be generated
AC_OUTPUT(Makefile src/Makefile src/lib/Makefile src/app/Makefile extras/Makefile Project/Makefile Project/VC/Makefile Project/SHC/Makefile Project/SHC/decaes/Makefile Project/SHC/libdecaes/Makefile)
